@@ -391,7 +391,7 @@ class APIEmbeddingTest {
                         return response;
                     }
                 }
-                Object next = responses.removeFirst();
+                Object next = responses.remove(0);
                 if (next instanceof IOException ioException) {
                     throw ioException;
                 }
